# glopManufTools

./: .gitignore  flake.nix  overlay.nix
discovery/: README.md  _utils.py  askpass.py  client.py  commands.py  default.nix  discovery_messages.md  msg_socket.py  protocol_client.py  pyproject.toml  server.py  socket_spawner.py  test_client.py  test_lldp_scanner.py  test_mdns_scanner.py  test_server.py  test_test_scanner.py
discovery/scanners/: base_scanner.py  lldp.py  mdns.py  test_scanner.py
discovery_applet/: __main__.py  applet.py  default.nix  pyproject.toml  worker.py
docs/ideas/: mdns_full_discovery.py
fabrica/: README.md
fabrica/discovery/: README.md  _utils.py  client.py  commands.py  default.nix  msg_socket.py  pyproject.toml  server.py  test_mdns_scanner.py  test_server.py  test_test_scanner.py
fabrica/discovery/scanners/: base_scanner.py  lldp.py  mdns.py  test_scanner.py
tests/fabrica/: test_lldp_scanner.py
