[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "discovery"
version = "0.1.0"
dependencies = ["pydantic", "scapy"]

[tool.setuptools.package-dir]
"discovery" = "."
"discovery.scanners" = "scanners"

[tool.setuptools]
packages = ["discovery", "discovery.scanners"]
