[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fabrica-discovery"
version = "0.1.0"
dependencies = ["pydantic", "scapy"]

[tool.setuptools.package-dir]
"fabrica.discovery" = "."
"fabrica.discovery.scanners" = "scanners"

[tool.setuptools]
packages = ["fabrica.discovery", "fabrica.discovery.scanners"]
